--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>Creazione evento</title>
-</head>
+	<head th:replace="fragments/base.html :: headFragment(title='Creazione evento')"></head>
 
-<body>
-	<form th:action="@{/admin/event}" method="POST" th:object="${event}">
-		<div>
-			Nome dell'evento: <input type="text" th:field="*{name}">
-		</div>
-		<span th:if="${#fields.hasErrors('name')}" 
-			  th:errors="*{name}"></span>
-		<div>
-			Data ed ora dell'evento: <input type="datetime-local" th:field="*{dateTime}">
-		</div>
-		<span th:if="${#fields.hasErrors('dateTime')}" 
-			  th:errors="*{dateTime}"></span>
-		<div>
-			<button type="submit">Crea</button>
-		</div>
-	</form>
-		<h3>
-			<a th:href="@{/admin}">Annulla</a>
-		</h3>
-</body>
+	<body>
+	
+		<form th:action="@{/admin/event}" method="POST" th:object="${event}">
+			<div>
+				Nome dell'evento: <input type="text" th:field="*{name}">
+			</div>
+			<span th:if="${#fields.hasErrors('name')}" 
+				  th:errors="*{name}"></span>
+			
+			<div>
+				Data ed ora dell'evento: <input type="datetime-local" th:field="*{dateTime}">
+			</div>
+			<span th:if="${#fields.hasErrors('dateTime')}" 
+				  th:errors="*{dateTime}"></span>
+				  
+			<div>
+				<button type="submit">Crea</button>
+			</div>
+			
+		</form>
+		
+			<h3>
+				<a th:href="@{/admin}">Annulla</a>
+			</h3>
+			
+	</body>
 
 </html>
