--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
+<html>
 
-<head>
-	<title>Registrati</title>
-</head>
+	<head th:replace="fragments/base.html :: headFragment(title='Registrati')"></head>
 
-<body>
-	<h1>Registrati</h1>
-	<form th:action="@{/register}" method="post">
-		<div>
-			<input type="text" th:field="${credentials.username}" placeholder="Username" />
-		</div>
-		<span th:if="${#fields.hasErrors('credentials.username')}"
-			  th:errors="${credentials.username}"></span>
-		<div>
-			<input type="password" th:field="${credentials.password}" placeholder="Password" />
-		</div>
-		<span th:if="${#fields.hasErrors('credentials.password')}"
-			  th:errors="${credentials.password}"></span>
-		<div>
-			<input type="text" th:field="${user.name}" placeholder="Nome" />
-		</div>
-		<span th:if="${#fields.hasErrors('user.name')}"
-			  th:errors="${user.name}"></span>
-		<div>
-			<input type="text" th:field="${user.surname}" placeholder="Cognome" />
-		</div>
-		<span th:if="${#fields.hasErrors('user.surname')}"
-			  th:errors="${user.surname}"></span>
-		<div>
-			<input type="submit" value="Registrati" />
-		</div>
-	</form>
-</body>
+	<body>
+		<h1>Registrati</h1>
+		
+		<form th:action="@{/register}" method="post">
+			<div>
+				<input type="text" th:field="${credentials.username}" placeholder="Username" />
+			</div>
+			<span th:if="${#fields.hasErrors('credentials.username')}"
+				  th:errors="${credentials.username}"></span>
+				  
+			<div>
+				<input type="password" th:field="${credentials.password}" placeholder="Password" />
+			</div>
+			<span th:if="${#fields.hasErrors('credentials.password')}"
+				  th:errors="${credentials.password}"></span>
+				  
+			<div>
+				<input type="text" th:field="${user.name}" placeholder="Nome" />
+			</div>
+			<span th:if="${#fields.hasErrors('user.name')}"
+				  th:errors="${user.name}"></span>
+			<div>
+				<input type="text" th:field="${user.surname}" placeholder="Cognome" />
+			</div>
+			<span th:if="${#fields.hasErrors('user.surname')}"
+				  th:errors="${user.surname}"></span>
+				  
+			<div>
+				<input type="submit" value="Registrati" />
+			</div>
+			
+		</form>
+		
+		<span>Hai gi&agrave; un account? <a th:href="@{/login}">Accedi</a>.</span>
+		
+		
+	</body>
 
 </html>
