--- a/src/main/resources/templates/create-competition.html
+++ b/src/main/resources/templates/create-competition.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>Creazione competizione</title>
-</head>
-
-<body>
-	<form th:action="@{/admin/competition}" method="POST" th:object="${competition}">
-		<div>
-			Nome della competizione: <input type="text" th:field="*{name}">
-		</div>
-		<span th:if="${#fields.hasErrors('name')}" 
-			  th:errors="*{name}"></span>
-		<div>
-			Data ed ora di inizio della competizione: <input type="datetime-local" th:field="*{startDateTime}">
-		</div>
-		<span th:if="${#fields.hasErrors('startDateTime')}" 
-			  th:errors="*{startDateTime}"></span>
-		<div>
-			Data ed ora di fine della competizione: <input type="datetime-local" th:field="*{endDateTime}">
-		</div>
-		<span th:if="${#fields.hasErrors('endDateTime')}" 
-			  th:errors="*{endDateTime}"></span>
-		<div>
-			<button type="submit">Crea</button>
-		</div>
-	</form>
-		<h3>
-			<a th:href="@{/admin}">Annulla</a>
-		</h3>
-</body>
+	<head th:replace="fragments/base.html :: headFragment(title='Creazione competizione')"></head>
+	
+	<body>
+	
+		<form th:action="@{/admin/competition}" method="POST" th:object="${competition}">
+			<div>
+				Nome della competizione: <input type="text" th:field="*{name}">
+			</div>
+			<span th:if="${#fields.hasErrors('name')}" 
+				  th:errors="*{name}"></span>
+			
+			<div>
+				Data ed ora di inizio della competizione: <input type="datetime-local" th:field="*{startDateTime}">
+			</div>
+			<span th:if="${#fields.hasErrors('startDateTime')}" 
+				  th:errors="*{startDateTime}"></span>
+			<div>
+				Data ed ora di fine della competizione: <input type="datetime-local" th:field="*{endDateTime}">
+			</div>
+			<span th:if="${#fields.hasErrors('endDateTime')}" 
+				  th:errors="*{endDateTime}"></span>
+			
+			<div>
+				<button type="submit">Crea</button>
+			</div>
+		
+		</form>
+		
+			<h3>
+				<a th:href="@{/admin}">Annulla</a>
+			</h3>
+	
+	</body>
 
 </html>
