--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -6,56 +6,123 @@
 	
 	<body>
 	
-		<main>
-			<a th:href="@{/}">Alla User Home</a>
-			<h1>Admin Home</h1>
-			<section th:unless="${#lists.isEmpty(pendingUsers)}">
-				<h2>Utenti in attesa di accettazione</h2>
-				<ul>
-					<li th:each="pendingUser : ${pendingUsers}">
-						<span th:text="${pendingUser.surname + ', ' + pendingUser.name}"></span>
-						<a th:href="@{'/admin/credentials/' + ${pendingUser.credentials.id} + '/enable'}">Accetta</a>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<h2>Utenti membri del team</h2>
-				<ul>
-					<li th:each="member : ${members}">
-						<span th:text="${member.surname + ', ' + member.name}"></span>
-						<a th:href="@{'/admin/credentials/' + ${member.credentials.id} + '/disable'}">Disabilita</a>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<h2>Eventi</h2>
-				<a th:href="@{/admin/event/new}">Crea evento</a>
-				<ul>
-					<li th:each="event : ${events}">
-						<span th:text="${event.name}"></span>
-						<a th:href="@{'/admin/event/' + ${event.id} + '/update'}">Modifica</a>
-						<a th:href="@{'/admin/event/' + ${event.id} + '/delete'}">Annulla</a>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<h2>Competizioni</h2>
-				<a th:href="@{/admin/competition/new}">Crea competizione</a>
-				<ul>
-					<li th:each="competition : ${competitions}">
-						<a th:href="@{'/admin/competition/' + ${competition.id}}" th:text="${competition.name}"></a>
-						<a th:href="@{'/admin/competition/' + ${competition.id} + '/update'}">Modifica generalit&agrave;</a>
-						<a th:href="@{'/admin/competition/' + ${competition.id} + '/match/new'}">Aggiungi match</a>
-						<a th:href="@{'/admin/competition/' + ${competition.id} + '/delete'}">Cancella</a>
-					</li>
-				</ul>
-			</section>
-			<div>
-				<h3>
-					Effettua il
-					<a th:href="@{/logout}">logout</a>
-				</h3>
-		</main>
+    <header>
+      <div class="navbar navbar-dark bg-dark shadow-sm container-flex">
+        <div class="row w-100 p-3">
+          <a th:href="@{/}" class="col text-white ml-5 ">
+            <h5> < Alla user home</h5>
+          </a>
+          <div class="col text-white">
+		    <span class="text-muted float-right mr-5">Effettua il
+				<a th:href="@{/logout}">logout</a>
+				
+			</span>
+		  </div>
+        </div>
+      </div>
+    </header>
+    <main>
+    <div class="container">
+      <div class="d-flex align-items-center p-3 my-3 text-white gradient-custom-2 rounded shadow-sm">
+        <img th:src="@{/images/tentacle.png}" class="me-3" alt="" width="48" height="38">
+        <div class="lh-1">
+          <h4 th:text="${username}" class="h4 mb-0 text-white lh-1"></h4>
+          <small>Admin home</small>
+        </div>
+      </div>
+
+    </div>
+      <section th:unless="${#lists.isEmpty(pendingUsers)}">
+        <div class="container">
+          <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <h6 class="pb-2 mb-0">Utenti in attesa di accettazione</h6>
+            <hr>
+            <div class="d-flex text-muted pt-3">
+
+              <ul class="w-100">
+                <li th:each="pendingUser : ${pendingUsers}">
+                  <div class="pb-3 mb-0 lh-sm row">
+                  	<div class="col">
+                    	<strong th:text="${pendingUser.surname + ', ' + pendingUser.name}"  class="text-gray-dark"></strong>
+                    </div>
+                    <div class="col">
+                    	<a th:href="@{'/admin/credentials/' + ${pendingUser.credentials.id} + '/enable'}" class="btn btn-primary fa-lg gradient-custom-2 float-right mr-4">Accetta</a>
+                  	</div>
+                  </div>
+                </li>
+                <hr>
+              </ul>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <h6 class="pb-2 mb-0">Eventi</h6>
+            <hr>
+            <a th:href="@{/admin/event/new}" class="btn btn-primary fa-lg gradient-custom-2">Crea evento</a>
+            <div class="d-flex text-muted pt-3">
+
+              <ul class="w-100">
+                <li th:each="event : ${events}">
+                  <strong th:text="${event.name}" class="text-gray-dark"></strong>
+                  <div class="row">
+                  	<div class="col">
+	                  <a th:href="@{'/admin/event/' + ${event.id} + '/update'}" class="link-purple">Modifica</a>
+	                </div>
+	                <div class="col">
+	                  <a th:href="@{'/admin/event/' + ${event.id} + '/delete'}" class="float-right mr-5 link-purple">Annulla</a>
+				  	</div>
+				  </div>
+				  <hr>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+
+      <section>
+        <div class="container pb-4">
+          <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <h6 class="pb-2 mb-0">Competizioni</h6>
+            <hr>
+            <a th:href="@{/admin/event/new}" class="btn btn-primary fa-lg gradient-custom-2">Crea competizione</a>
+            <div class="d-flex text-muted pt-3">
+
+ 
+	      				<ul class="w-100">
+	      					<li th:each="competition : ${competitions}">
+	      						<a th:href="@{'/admin/competition/' + ${competition.id}}" th:text="${competition.name}" class="font-weight-bold link-purple"></a>
+	      						<div class="row">
+	      							<div class="col">
+		      							<a th:href="@{'/admin/competition/' + ${competition.id} + '/update'}" class="link-purple">Modifica generalit&agrave;</a>
+		      						</div>
+		      						<div class="col text-center">
+		      						<a th:href="@{'/admin/competition/' + ${competition.id} + '/match/new'}" class="link-purple">Aggiungi match</a>
+		      						</div>
+		      						<div class="col">
+		      							<a th:href="@{'/admin/competition/' + ${competition.id} + '/delete'}" class="float-right mr-5 link-purple">Cancella</a>
+	    							</div>
+	    						</div>
+	    				</li>
+	    				<hr>
+  				</ul>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+
+    </main>
+
 	</body>
 
 </html>
