--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,6 +42,11 @@
 						Non hai ancora un account? <a th:href="@{/register}">Registrati</a>.</span>
 					</p>
 				</div>
+				<hr>
+				<a class="btn btn-primary" th:href="@{/oauth2/authorization/google}">
+					<!-- <i class="bi bi-google"></i> -->
+					Accedi con Google
+				</a>	
 
 			</div>
 
