Corretto il reindirizzamento dopo l'accesso; refactoring
Co-Authored-By: Valerio Parente <92206434+NinthLifeLeft66@users.noreply.github.com>

--- a/src/main/resources/templates/create-match.html
+++ b/src/main/resources/templates/create-match.html
@@ -5,7 +5,7 @@
 
 	<body>
 	
-		<form th:action="@{'/admin/competition/' + ${competitionId} + '/match'}" method="POST" th:object="${match}">
+		<form th:action="@{'/admin/competition/' + ${competition.id} + '/match'}" method="POST" th:object="${match}">
 			<div>
 				Data ed ora di inizio del match: <input type="datetime-local" th:field="*{dateTime}">
 			</div>
